--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import { SpotList } from '@/components/views/SpotList'
 import Layout from '@/layouts/Layout.astro'
+
+const isDev = process.env.NODE_ENV == 'development'
 ---
 
-<Layout title='サイトメンテナンスのお知らせ'>
-  <main>
-    <SpotList />
-  </main>
+<Layout title='INDEX PAGE'>
+  <SpotList />
 </Layout>
