--- a/src/pages/svelte/index.astro
+++ b/src/pages/svelte/index.astro
@@ -4,5 +4,5 @@ import MySvelte from '@/components/ui/MySvelte.svelte'
 ---
 
 <Layout title='INDEX PAGE'>
-  <MySvelte />
+  <MySvelte client:load />
 </Layout>
